@@ -86,7 +86,7 @@ my %config = (
 	               },
              );
 
-if ( exists $ARGV[0] and $ARGV[0] eq 'autoconf' ) {
+if ( defined $ARGV[0] and $ARGV[0] eq 'autoconf' ) {
   # Now see if "sensors" can run
   my $text = `$SENSORS`;
   if ($?) {
@@ -107,7 +107,7 @@ if ( exists $ARGV[0] and $ARGV[0] eq 'autoconf' ) {
   exit 0;
 }
 
-if ($ARGV[0] and $ARGV[0] eq 'suggest') {
+if (defined $ARGV[0] and $ARGV[0] eq 'suggest') {
   my $text = `$SENSORS`;
   foreach my $func (keys %config) {
     print $func, "\n" if $text =~ $config{$func}->{regex};
@@ -119,7 +119,7 @@ $0 =~ /sensors_(.+)*$/;
 my $func = $1;
 exit 2 unless defined $func;
 
-if ( exists $ARGV[0] and $ARGV[0] eq 'config' ) {
+if ( defined $ARGV[0] and $ARGV[0] eq 'config' ) {
   print "graph_title $config{$func}->{title}\n";
   print "graph_vtitle $config{$func}->{vtitle}\n";
   print "graph_args $config{$func}->{graph_args}\n";
